<resources>
    <string name="app_name">YourSport</string>
    <string name="error_server_message">message</string>
    <string name="log_error">ERROR: </string>
    <string name="log_info">INFO: </string>
    <string name="dialogo_aceptar">Aceptar</string>
    <string name="dialogo_cancelar">Cancelar</string>
    <string name="titulo_seleccionar_foto">Selecciona una foto</string>
    <string name="titulo_seleccionar_foto_camara">Cámara</string>
    <string name="titulo_seleccionar_foto_galeria">Galería</string>
    <string name="imagen_cargada_correctamente">Imagen guardada</string>
    <string name="imagen_cargada_error">Error al cargar la imagen</string>
    <string name="ubicacion_registrada_error">Error al registrar la ubicación</string>
    <string name="registrar_participante_evento">Registrado correctamente</string>
    <string name="desapuntar_participante_evento">Desapuntado correctamente</string>
    <string name="login_correo">Correo</string>
    <string name="login_password">Contrasenya</string>
    <string name="login_boton_iniciar_sesion">Iniciar sesión</string>
    <string name="login_boton_crear_cuenta">Crear cuenta</string>
    <string name="toolbar_iniciar_sesion">Iniciar</string>
    <string name="login_correo_obligatorio">Introduzca la dirección de correo</string>
    <string name="login_contrasenya_obligatoria">Introduzca la contrasenya</string>
    <string name="registro_titulo_datos_personales">Datos personales</string>
    <string name="registro_titulo_ubicacion">Ubicación</string>
    <string name="registro_titulo_deportes">Deportes</string>
    <string name="registro_titulo_provincias">Provincia</string>
    <string name="registro_titulo_municipios">Municipio</string>
    <string name="registro_nombre_obligatorio">Introduzca su nombre</string>
    <string name="registro_apellido_obligatorio">Introduzca sus apellidos</string>
    <string name="registro_username_obligatorio">Introduzca un nombre de usuario</string>
    <string name="registro_correo_obligatorio">Introduzca su correo electrónico</string>
    <string name="registro_password_obligatorio">Introduzca una constraseña</string>
    <string name="registro_password2_obligatorio">Repita su constraseña</string>
    <string name="registro_passwords_incorrectos">Contraseñas incorrectas</string>
    <string name="registro_deportes_obligatorio">Selecciona alguna categoría deportiva</string>
    <string name="registro_apellidos">Apellidos</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_username">Username</string>
    <string name="registro_password">Contraseña</string>
    <string name="registro_password_repetir">Repetir contraseña</string>
    <string name="registro_dialog_registrar_usuario_titulo">Registrar usuario</string>
    <string name="registro_dialog_registrar_usuario_contenido">¿Desea crear el usuario con los datos introducidos?</string>
    <string name="no_resultados_busqueda_inicial">No se han encontrado coincidencias de sus categorías deportivas favoritas en su municipio. Para realizar una búsqueda nueva utilice los filtros del buscador de eventos. </string>
    <string name="no_resultados_busqueda">No se han encontrado resultados.</string>
    <string name="crear_evento_titulo_informacion_del_evento">Información del evento</string>
    <string name="crear_evento_titulo_configuracion_del_evento">Configuración del evento</string>
    <string name="crear_evento_titulo_ubicacion_del_evento">¿Dónde y cuándo?</string>
    <string name="crear_evento_titulo_obligatorio">Introduzca el título del evento</string>
    <string name="crear_evento_descripcion_obligatoria">Introduzca la descripción del evento</string>
    <string name="crear_evento_deporte_obligatorio">Elija una categoría deportiva</string>
    <string name="crear_evento_participantes_obligatorio">Participantes obligatorio</string>
    <string name="crear_evento_duracion_obligatoria">Duración obligatoria</string>
    <string name="crear_evento_fecha_obligatoria">Introduzca la fecha del evento</string>
    <string name="crear_evento_hora_obligatoria">Introduzca la hora del evento</string>
    <string name="crear_evento_titulo">Título</string>
    <string name="crear_evento_descripcion">Descripción</string>
    <string name="crear_evento_deporte">Deporte</string>
    <string name="crear_evento_Dia">Dia</string>
    <string name="crear_evento_Hora">Hora</string>
    <string name="crear_evento_participantes">Participantes</string>
    <string name="crear_evento_duracion">Duración</string>
    <string name="crear_evento_tooltip_participantes">Indique 0 para una cantidad ilimitada de participantes</string>
    <string name="crear_evento_tooltip_privacidad_foro">Seleccione <b>público</b> para que cualquier usuario registrado en la aplicación pueda participar y visualizar el contenido del foro. Seleccione <b>privado</b> para que solo los usuarios que participen en el evento puedan participar y visualizar el contenido del foro</string>
    <string name="crear_evento_foro_publico">Público</string>
    <string name="crear_evento_foro_Privado">Privado</string>
    <string name="crear_evento_privacidad_foro">Privacidad foro</string>
    <string name="crear_evento_ubicacion">Ubicación</string>
    <string name="crear_evento_municipio">Municipio</string>
    <string name="registro_dialog_crear_evento_titulo">Crear evento</string>
    <string name="registro_dialog_crear_evento_contenido">¿Desea crear el evento deportivo con los datos introducidos?</string>
    <string name="informacion_evento_duracion_ilimitada">ilimitada</string>
    <string name="informacion_evento_duracion_minutos">minutos</string>
    <string name="informacion_evento_error">Error al obtener la información del evento</string>
    <string name="informacion_evento_descripción">Descripción</string>
    <string name="informacion_evento_titulo">Título</string>
    <string name="informacion_evento_municipio">Municipio</string>
    <string name="informacion_evento_deporte">Deporte</string>
    <string name="informacion_evento_fecha">Fecha</string>
    <string name="informacion_evento_participantes">Participantes</string>
    <string name="informacion_evento_duracion">Duración</string>
    <string name="participantes_evento_error_eliminar">Error al eliminar el participante</string>
    <string name="participantes_evento_eliminar_participante">Participante eliminado</string>
    <string name="perfil_usuario_eventos_creados">Eventos creados</string>
    <string name="perfil_usuario_username">Username</string>
    <string name="perfil_usuario_email">Email</string>
    <string name="perfil_usuario_ubicacion">Ubicación</string>
    <string name="perfil_usuario_deportes">Deportes</string>
    <string name="menu_modificar_perfil">Guardar</string>
    <string name="registro_dialog_modificar_perfil_titulo">Modificar perfil</string>
    <string name="registro_dialog_modificar_perfil_contenido">¿Desea guardar los cambios introducidos?</string>
    <string name="notificacion_titulo_eventos_creados">Eventos creados</string>
    <string name="notificacion_usuario_nuevo_titulo">Alta nuevo usuario</string>
    <string name="notificacion_usuario_nuevo_descripcion">Recibir notificación cuando un nuevo usuario se registre en un evento</string>
    <string name="notificacion_titulo_baja_usuario">Baja usuario registrado</string>
    <string name="notificacion_descripcion_baja_usuario">Recibir una notificación cuando un usuario registrado en el evento se da de baja</string>
    <string name="notificacion_titulo_evento_registrado">Eventos registrado</string>
    <string name="notificacion_titulo_evento_cancelado">Evento cancelado</string>
    <string name="notificacion_descripcion_evento_cancelado">Recibir una notificación al cancelarse un evento registrado</string>
    <string name="notificacion_datos_evento_modificados">Datos evento modificados</string>
    <string name="notificacion_descripcion_evento_modificado">Recibir una notificación al modificarse los datos de un evento registrado</string>
    <string name="notificacion_titulo_evento_desapuntado">Eliminado evento</string>
    <string name="notificacion_descripcion_evento_desapuntado">Recibir una notificación al ser desapuntado de un evento registrado</string>
    <string name="menu_modificar_evento">Guardar</string>
    <string name="registro_dialog_modificar_evento_titulo">Modificar evento</string>
    <string name="registro_dialog_modificar_evento_contenido">¿Desea guardar los cambios introducidos?</string>
    <string name="registro_dialog_cancelar_evento_titulo">Suspender evento</string>
    <string name="registro_dialog_cancelar_evento_contenido">¿Desea suspender el evento?</string>
    <string name="registro_dialog_eliminar_usuario_titulo">Eliminar participante</string>
    <string name="registro_dialog_eliminar_usuario_contenido">¿Desea eliminar al participante del evento?</string>
    <string name="registro_dialog_desapuntar_evento_titulo">Desapuntar evento</string>
    <string name="registro_dialog_desapuntar_evento_contenido">¿Desea realmente desapuntarse del evento?</string>
    <string name="registro_dialog_registrarse_evento_titulo">Registro evento</string>
    <string name="registro_dialog_registrarse_evento_contenido">¿Desea realmente registrarse en el evento?</string>
    <string name="mis_eventos_error_eventos_registrados">Error al obtener los eventos registrados</string>
    <string name="mis_eventos_desapuntar_evento">Has sido desapuntado del evento</string>
    <string name="mis_eventos_suspender_evento">El evento ha sido suspendido</string>
    <string name="mis_eventos_error_suspender_evento">Error al suspender el evento</string>
    <string name="foro_escriba_su_mensaje">Escriba su mensaje …</string>
    <string name="boton_iniciar_sesion">Iniciar sesión</string>
    <string name="boton_crear_cuenta">Crear cuenta</string>
    <string name="boton_salir">Salir</string>
    <string name="texto_registro_email_nuevo">Email</string>
    <string name="registrar_usuario_provincia">Provincia: </string>
    <string name="registrar_usuario_municipio">Municipio: </string>
    <string name="texto_registro_usuario_nuevo_deportes_favoritos">Deportes Favoritos</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="action_settings">Settings</string>
    <string name="nick_header_menu">Username</string>
    <string name="email_header_menu">Email@email.com</string>
    <string name="toolbar_editar_perfil">Editar</string>
    <string name="toolbar_crear_cuenta">Registrar</string>
    <string name="buscador">Buscador</string>
    <string name="buscador_titulo">¿Qué estás buscando?</string>
    <string name="buscador_reiniciar_filtros">Reiniciar filtros</string>
    <string name="buscador_aplicar_filtros">Aplicar filtros</string>
    <string name="buscador_todos_los_deportes">Todos los deportes</string>
    <string name="ingrese_una_fecha">Ingrese una fecha</string>
    <string name="buscador_cerca_de_mi">Cerca de mi</string>
    <string name="buscador_unicacion">Ubicación</string>
    <string name="cualquier_distancia_buscador">Cualquier distancia</string>
    <string name="title_activity_evento_detalle">EventoDetalle</string>
    <string name="tab_evento_informacion">Información</string>
    <string name="tab_evento_participantes">Participantes</string>
    <string name="tab_evento_participantes_en_cola">En cola</string>
    <string name="tab_evento_foro">Foro</string>
    <string name="tab_evento_ubicacion">Ubicación</string>
    <string name="eventos_creados">Eventos creados</string>
    <string name="eventos_registrado">Eventos registrado</string>
    <string name="eventos_registrado_en_cola">Eventos en cola</string>
    <string name="crear_evento_principal">Crear Evento</string>
    <string name="crear_vento_menu">Crear</string>
</resources>