<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.udg.pds.todoandroid.activity.EventoDetalle">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/background_dark"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_evento_informacion" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_evento_participantes" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_evento_participantes_en_cola" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_evento_foro" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_evento_ubicacion" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ru.dimorinny.floatingtextbutton.FloatingTextButton
        android:id="@+id/apuntar_participante_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="5dp"
        android:background="@drawable/circle_black_floatingtextbutton"
        app:floating_background_color="@android:color/transparent"
        app:floating_left_icon="@android:drawable/ic_input_add"
        app:floating_title="Apuntarme"
        app:floating_title_color="@android:color/white"
        app:layout_anchorGravity="bottom|center"
        app:layout_behavior="ru.dimorinny.floatingtextbutton.behavior.SnackbarBehavior" />


    <ru.dimorinny.floatingtextbutton.FloatingTextButton
        android:id="@+id/eliminar_participante_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="5dp"
        android:background="@drawable/circle_black_floatingtextbutton"
        app:floating_background_color="@android:color/transparent"
        app:floating_left_icon="@android:drawable/ic_delete"
        app:floating_title="Desapuntar"
        app:floating_title_color="@android:color/white"
        app:layout_anchorGravity="bottom|center"
        app:layout_behavior="ru.dimorinny.floatingtextbutton.behavior.SnackbarBehavior" />

</android.support.design.widget.CoordinatorLayout>
