<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/boton_inicio_sesion"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:elevation="0dp"
        android:fontFamily="monospace"
        android:text="@string/boton_iniciar_sesion"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />

    <Button
        android:id="@+id/boton_crear_cuenta"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:text="@string/boton_crear_cuenta"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />

    <Button
        android:id="@+id/boton_salir"
        style="@android:style/Widget.DeviceDefault.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:fontFamily="monospace"
        android:text="@string/boton_salir"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>